Support custom page backgrounds

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -47,7 +47,7 @@ const { socialLinks } = siteInfo;
     @media (hover: hover) {
       &:hover {
         background-color: var(--text);
-        color: var(--bg-purple);
+        color: var(--bg);
       }
     }
   }
