--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,7 +6,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 <BaseLayout
   title="Page Not Found"
-  description="Looks like nobody’s home. Maybe try a different page?"
+  description="Looks like nobody's home. Maybe try a different page?"
 >
   <div class="error">
     <Image src={emptyShell} alt="Namesake empty shell" width={180} />
