--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -27,6 +27,7 @@ const { Content } = await render();
   ogImage={data.ogImage?.image.src}
   ogAlt={data.ogImage?.alt}
   annotation={data.annotation}
+  color={data.color}
 >
   <Content />
 </ProseLayout>
