--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -184,7 +184,7 @@ import { Content } from "../content/pages/index.md";
   }
 
   .who-you-are {
-    color: var(--bg-purple);
+    color: var(--bg);
   }
 
   .subhead {
@@ -196,7 +196,7 @@ import { Content } from "../content/pages/index.md";
   }
 
   form {
-    color: var(--bg-purple);
+    color: var(--bg);
     background-color: var(--text);
     margin-block-start: var(--space-3xl);
     padding: var(--space-l) var(--space-m);
@@ -225,7 +225,7 @@ import { Content } from "../content/pages/index.md";
   input,
   button {
     border: none;
-    background: var(--bg-purple);
+    background: var(--bg);
     border-radius: var(--radius-2xs);
     color: var(--text);
     padding: var(--space-s) var(--space-s);
