--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -37,9 +37,8 @@
   --radius-l: var(--space-l);
 
   /* Colors */
-  --bg-purple: #CDA5EF;
-  --bg-purple-overlay: rgb(205 165 239 / 0.8);
+  --bg: #cda5ef;
   --text: #111111;
   --text-placeholder: rgba(0, 0, 0, 0.5);
-  --white: #FFFFFF;
+  --white: #ffffff;
 }
