--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -39,6 +39,8 @@ const { title, description, annotation = "circle" } = Astro.props;
 
     h1 {
       display: inline;
+      /* Visual alignment */
+      margin-inline-start: -0.06em;
     }
 
     .subhead {
