Partners component, fix 404

--- a/src/components/Subscribe.astro
+++ b/src/components/Subscribe.astro
@@ -16,6 +16,10 @@ import { RiArrowRightLine } from "react-icons/ri";
     border-radius: 3px;
     width: 100%;
     max-width: 520px;
+
+    :focus-visible {
+      outline-color: var(--footerText);
+    }
   }
 
   .input-group {
