--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -134,8 +134,7 @@ img {
   width: 1px;
 }
 
-a:focus-visible,
-button:focus-visible {
+:focus-visible {
   outline: 3px solid var(--text);
   outline-offset: 2px;
 }
