--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,4 @@
 ---
-import { Image } from "astro:assets";
-import emptyShell from "./_images/empty-shell.png";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
@@ -9,7 +7,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   description="Looks like nobody's home. Maybe try a different page?"
 >
   <div class="error">
-    <Image src={emptyShell} alt="Namesake empty shell" width={180} />
+    <img src="/assets/empty-shell.png" alt="Namesake empty shell" width={180} />
     <h1>No one’s home</h1>
     <p>
       We couldn’t find that page. <a href="/">Go home?</a>
