feat: Redesign footer (#74)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,27 +1,15 @@
 ---
-import { Image } from "astro:assets";
 import BaseLayout from "../layouts/BaseLayout.astro";
-import { RiArrowRightLine } from "react-icons/ri";
-import illustration from "./_images/namesake-form.png";
-import formIllustration from "./_images/form-snail.png";
+
 import { getCollection } from "astro:content";
 import siteInfo from "../data/site-info";
 
-const partners = await getCollection("partners");
-const shuffledPartners = partners.sort(() => 0.5 - Math.random());
-
 import { Content } from "../content/pages/index.md";
+import Partners from "../components/Partners.astro";
 ---
 
 <BaseLayout title={siteInfo.name} description={siteInfo.description}>
   <div class="home">
-    <Image
-      class="illustration"
-      src={illustration}
-      alt="Some snails and flowers on top of a court order document"
-      width={600}
-      densities={[1, 2]}
-    />
     <div class="content">
       <h1>
         <span>Be seen for</span><br /><span class="who-you-are"
@@ -31,45 +19,15 @@ import { Content } from "../content/pages/index.md";
       <div class="subhead">
         <Content />
       </div>
-      <form>
-        <Image
-          class="form-illustration"
-          src={formIllustration}
-          alt="A snail moving to the left"
-          width={240}
-          densities={[1, 2]}
-        />
-        <strong>Get notified when we launch:</strong>
-        <div class="input-group">
-          <input type="email" name="email" placeholder="Your email" required />
-          <button type="submit">Subscribe <RiArrowRightLine /></button>
-        </div>
-      </form>
     </div>
-    <div class="partners">
-      <h2>In partnership with</h2>
-      <ul>
-        {
-          shuffledPartners.map((partner) => (
-            <li>
-              <a
-                href={partner.data.url}
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label={`Visit ${partner.data.name}`}
-              >
-                <Image
-                  src={partner.data.logo}
-                  alt={partner.data.name}
-                  height={partner.data.height}
-                />
-              </a>
-            </li>
-          ))
-        }
-      </ul>
-    </div>
+    <img
+      class="illustration"
+      src="/assets/namesake-form.png"
+      alt="Some snails and flowers on top of a court order document"
+      width={600}
+    />
   </div>
+  <Partners />
 </BaseLayout>
 
 <script>
@@ -83,33 +41,18 @@ import { Content } from "../content/pages/index.md";
     });
     highlight.show();
   }
-
-  const partners: HTMLElement | null = document.querySelector(".partners h2");
-  if (partners) {
-    const brackets = annotate(partners, {
-      type: "underline",
-      animate: false,
-    });
-    brackets.show();
-  }
 </script>
 
 <style lang="scss">
   .home {
     display: grid;
     grid-template-columns: minmax(460px, 1fr) minmax(0, 1fr);
-    grid-template-rows: 1fr auto;
-    grid-template-areas:
-      "content illustration"
-      "partners partners";
+    grid-template-areas: "content illustration";
     gap: var(--space-2xl);
 
     @media (width < 800px) {
       grid-template-columns: 1fr;
-      grid-template-areas:
-        "content"
-        "partners";
-
+      grid-template-areas: "content";
       .illustration {
         display: none;
       }
@@ -123,55 +66,14 @@ import { Content } from "../content/pages/index.md";
     order: 1;
   }
 
-  img {
-    mix-blend-mode: multiply;
-    user-select: none;
-  }
-
   .content {
     grid-area: content;
     min-width: 0;
   }
 
-  .partners {
-    grid-area: partners;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin-inline: auto;
-    width: 100%;
-    overflow: hidden;
-    gap: var(--space-2xl);
-    padding-block: var(--space-2xl);
-
-    h2 {
-      font-size: var(--step-1);
-    }
-
-    ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      max-width: 100%;
-      display: grid;
-      justify-items: center;
-      align-items: center;
-      grid-template-columns: repeat(3, 240px);
-      grid-auto-rows: 80px;
-      gap: var(--space-l) var(--space-2xl);
-
-      @media (width < 900px) {
-        grid-template-columns: repeat(2, minmax(240px, 1fr));
-      }
-
-      @media (width < 600px) {
-        grid-template-columns: repeat(2, 1fr);
-      }
-
-      img {
-        max-width: min(240px, 40vw);
-      }
-    }
+  img {
+    mix-blend-mode: multiply;
+    user-select: none;
   }
 
   h1 {
@@ -193,60 +95,5 @@ import { Content } from "../content/pages/index.md";
     :global(p) + :global(p) {
       margin-top: var(--space-l);
     }
-  }
-
-  form {
-    color: var(--bg);
-    background-color: var(--text);
-    margin-block-start: var(--space-3xl);
-    padding: var(--space-l) var(--space-m);
-    position: relative;
-    border-radius: 2px;
-
-    @media (width < 540px) {
-      width: 100%;
-    }
-
-    .form-illustration {
-      width: 120px;
-      position: absolute;
-      bottom: calc(100% - 4px);
-      right: 20px;
-    }
-  }
-
-  .input-group {
-    max-width: 100%;
-    display: flex;
-    gap: var(--space-xs);
-    margin-block-start: var(--space-s);
-  }
-
-  input,
-  button {
-    border: none;
-    background: var(--bg);
-    border-radius: var(--radius-2xs);
-    color: var(--text);
-    padding: var(--space-s) var(--space-s);
-  }
-
-  input {
-    flex: 1;
-    min-width: 0;
-
-    &::placeholder {
-      color: var(--text-placeholder);
-    }
-  }
-
-  button {
-    font-weight: 600;
-    flex-shrink: 0;
-    cursor: pointer;
-    display: inline-flex;
-    gap: var(--space-2xs);
-    align-items: center;
-    padding-inline: var(--space-m);
   }
 </style>
