Revert some styles

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -84,12 +84,9 @@ const linkGroups: LinkGroup[] = [
     color: var(--footerText);
     line-height: 1.5;
     width: 100%;
+    padding-block: var(--space-xl);
     margin-block-start: var(--space-2xl);
     position: relative;
-    // box-shadow: 0 100px 0 var(--footerBg);
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-l);
 
     :focus-visible {
       outline-color: var(--footerText);
@@ -106,12 +103,8 @@ const linkGroups: LinkGroup[] = [
     justify-content: space-between;
     gap: var(--space-l);
 
-    &:first-of-type {
-      padding-block-start: var(--space-xl);
-    }
-
-    &:last-of-type {
-      padding-block-end: var(--space-xl);
+    + .content {
+      margin-block-start: var(--space-l);
     }
 
     &.end {
