--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -95,6 +95,8 @@ const linkGroups: LinkGroup[] = [
 
   .content {
     padding-inline: var(--space-l);
+    flex: 1;
+    width: 100%;
     max-width: 1200px;
     margin-inline: auto;
     display: flex;
