Make repository public

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import siteInfo from "../data/site-info";
+import siteInfo from "~/data/site-info";
 import Subscribe from "./Subscribe.astro";
 
 const { socialLinks } = siteInfo;
@@ -38,7 +38,7 @@ const linkGroups: LinkGroup[] = [
 <footer>
   <img
     class="footer-illustration"
-    src="/assets/form-snail.png"
+    src="/assets/footer/snail.png"
     alt="A snail moving to the left"
     width="240"
   />
