--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
+import siteInfo from "~/data/site-info";
 import Logo from "./Logo.astro";
-import siteInfo from "../data/site-info";
 
 const { socialLinks } = siteInfo;
 ---
