--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,14 +1,14 @@
 ---
-import "../styles/reset.css";
-import "../styles/theme.css";
-import "../styles/base.css";
 import { AstroFont } from "astro-font";
 import { join } from "node:path";
+import type { NamesakeColor } from "~/data/colors";
+import { colors } from "~/data/colors";
+import siteInfo from "~/data/site-info";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
-import siteInfo from "../data/site-info";
-import { colors } from "../data/colors";
-import type { NamesakeColor } from "../data/colors";
+import "../styles/base.css";
+import "../styles/reset.css";
+import "../styles/theme.css";
 
 export interface Props {
   title: string;
