--- a/src/pages/brand-assets/_components/Swatches.astro
+++ b/src/pages/brand-assets/_components/Swatches.astro
@@ -1,6 +1,5 @@
 ---
-import { RiClipboardLine, RiPaletteLine } from "react-icons/ri";
-import { colors } from "../../../data/colors";
+import { colors } from "~/data/colors";
 ---
 
 <ul class="swatches">
