Add path aliases

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,11 +1,11 @@
 ---
 import { AstroFont } from "astro-font";
 import { join } from "node:path";
+import Footer from "~/components/Footer.astro";
+import Header from "~/components/Header.astro";
 import type { NamesakeColor } from "~/data/colors";
 import { colors } from "~/data/colors";
 import siteInfo from "~/data/site-info";
-import Footer from "../components/Footer.astro";
-import Header from "../components/Header.astro";
 import "../styles/base.css";
 import "../styles/reset.css";
 import "../styles/theme.css";
