--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "~/layouts/BaseLayout.astro";
 
 import { getCollection, getEntries, type CollectionEntry } from "astro:content";
 
