--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import type { RoughAnnotationType } from "rough-notation/lib/model";
+import PageHeader from "~/components/PageHeader.astro";
 import type { NamesakeColor } from "~/data/colors";
-import PageHeader from "../components/PageHeader.astro";
 import { smartquotes } from "../helpers/helpers";
 import BaseLayout from "./BaseLayout.astro";
 
