--- a/src/pages/press.astro
+++ b/src/pages/press.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from "astro:assets";
 import dayjs from "dayjs";
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "~/layouts/BaseLayout.astro";
 
 import { getCollection } from "astro:content";
-import PageHeader from "../components/PageHeader.astro";
+import PageHeader from "~/components/PageHeader.astro";
 
 const pressArticles = await getCollection("press");
 pressArticles.sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
