feat: Make repository public (#79)

--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -1,9 +1,9 @@
 ---
 import type { RoughAnnotationType } from "rough-notation/lib/model";
-import PageHeader from "../components/PageHeader.astro";
+import PageHeader from "~/components/PageHeader.astro";
+import type { NamesakeColor } from "~/data/colors";
 import { smartquotes } from "../helpers/helpers";
 import BaseLayout from "./BaseLayout.astro";
-import type { NamesakeColor } from "../data/colors";
 
 interface Props {
   title: string;
