--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "~/layouts/BaseLayout.astro";
 ---
 
 <BaseLayout
@@ -7,11 +7,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   description="Looks like nobody's home. Maybe try a different page?"
 >
   <div class="error">
-    <img src="/assets/empty-shell.png" alt="Namesake empty shell" width={180} />
+    <img src="/assets/404/empty-shell.png" alt="Namesake empty shell" />
     <h1>No one’s home</h1>
-    <p>
-      We couldn’t find that page. <a href="/">Go home?</a>
-    </p>
+    <p>We couldn’t find that page.</p>
   </div>
 </BaseLayout>
 
@@ -22,11 +20,16 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-end;
-    gap: var(--space-l);
+    gap: var(--space-m);
   }
 
   img {
     mix-blend-mode: multiply;
+    width: 92px;
+  }
+
+  h1 {
+    font-size: var(--step-4);
   }
 
   p {
